# NAGEN-Engine

./: .gitmodules  CMakeLists.txt  LICENCE.md  README.md
Game/: myGame.cpp  myGame.hpp
NAGEN Engine/: Blank.swift  NAGENobject.cpp  NAGENobject.hpp  globalConsts.h  main.cpp  render.cpp  vertex.hpp
NAGEN Engine.xcodeproj/: project.pbxproj
NAGEN Engine.xcodeproj/xcshareddata/xcschemes/: NAGEN Engine 1.xcscheme  NAGEN Engine.xcscheme
NAGEN Engine.xcodeproj/xcuserdata/FarMaT.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
NAGEN Engine.xcodeproj/xcuserdata/FarMaT.xcuserdatad/xcschemes/: xcschememanagement.plist
NAGEN Engine/include/: NAGENobject.hpp  engine.hpp  globalConsts.h  render.hpp  vertex.hpp
NAGEN Engine/src/: NAGENobject.cpp  engine.cpp  render.cpp  thrush.txt
Nagen Engine Framework/: CMakeLists.txt
Nagen Engine Framework/include/: NAGENobject.hpp  engine.hpp  globalConsts.h  mesh.hpp  player.hpp  render.hpp  renderer.hpp  vertex.hpp
Nagen Engine Framework/include/objc/: button.hpp
Nagen Engine Framework/include/ui/: keyboard.hpp
Nagen Engine Framework/src/: NAGENobject.cpp  controller.cpp  controller.hpp  engine.cpp  mesh.cpp  player.cpp  render.cpp  renderer.cpp  renderer.hpp
Nagen Engine Framework/src/objc/: keyboard.mm
